fix edit toolbar overlap and disable hints in edit mode

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,6 +4,10 @@
   min-height: 100vh;
 }
 
+:host(.editing) {
+  padding-bottom: 60px;
+}
+
 #hint-status {
   position: fixed;
   bottom: 24px;
